# Malicious-Compiler

./: CMakeLists.txt  GaloisOT.cpp  README.md
Circuits/HyCC/src/cbmc/src/cpp/: cpp_constructor.d  cpp_convert_type.d  cpp_declaration.d  cpp_declarator.d  cpp_declarator_converter.d  cpp_destructor.d  cpp_enum_type.d  cpp_exception_id.d  cpp_id.d  cpp_instantiate_template.d  cpp_internal_additions.d  cpp_is_pod.d  cpp_language.d  cpp_name.d  cpp_namespace_spec.d  cpp_parse_tree.d  cpp_parser.d  cpp_scope.d  cpp_scopes.d  cpp_token_buffer.d  cpp_type2name.d  cpp_typecheck.d  cpp_typecheck_bases.d  cpp_typecheck_code.d  cpp_typecheck_compound_type.d  cpp_typecheck_constructor.d  cpp_typecheck_conversions.d  cpp_typecheck_declaration.d  cpp_typecheck_destructor.d  cpp_typecheck_enum_type.d  cpp_typecheck_expr.d  cpp_typecheck_fargs.d  cpp_typecheck_function.d  cpp_typecheck_initializer.d  cpp_typecheck_linkage_spec.d  cpp_typecheck_method_bodies.d  cpp_typecheck_namespace.d  cpp_typecheck_resolve.d  cpp_typecheck_static_assert.d  cpp_typecheck_template.d  (+7 more)
Datetype/: GR.py  LinearSecretShare.py  z2k.py
Network/: Party.py
Protocols/: FLIOP.py  Lut.py  Mac_Protocol.py  mac_pure.py
utils/: Circuit.py  OT_OLE.py  kill_port.py  network.py  polynomial.py  tools.py
